<resources>
    <string name="app_name">CSTaskClient</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_login">Login</string>
    <string name="projects">Projects</string>
    <string name="login_title">CS Task Management system</string>
    <string name="openDrawer">Open menu</string>
    <string name="closeDrawer">Close menu</string>
    <string name="login.error">Failed to authorize!</string>
    <string name="login_error_network">Can not authentificate in the system. Make sure you have internet connection</string>
    <string name="error_network">Can not load data. Make sure you have internet connection</string>
    <string name="workTime">Work hours</string>
    <string name="worktimeDescr">Work description</string>
    <string name="button_ok">OK</string>
    <string name="dialog_worktime">Specify Work description and time</string>
    <string name="error_api_operation">Operation failed, the server may be down. Please, try again soon</string>
    <string name="work_time_status_done">Operation status:</string>
    <string name="enter_text">Input your message</string>
    <string name="lastActivity">Last Activity</string>
    <string name="action_add_task">New task</string>
    <string name="alert_task_created">Task created successfully with number</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="planned_end_date">Planned end date</string>
    <string name="start_date">Start date</string>
    <string name="assignee">Assignee</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="project">Project</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="openNewTask">Open new task</string>
    <string name="new_task_is_created_alert">New task is created. Would you like to open task\'s discussion?</string>
    <string name="select_assignee_to_view_tasks">Select assignee to view tasks</string>
    <string name="assignedTasks">Assigned Tasks</string>
    <string name="planned_labor">Planned labor</string>
    <string name="action_move_to_task">Перейти к задаче по №</string>
    <string name="download_start">Скачивание началось... Подробности по прогрессу скачивания см. в панели уведомлений</string>
    <string name="chhose_file_to_download">Выберите файл, после чего начнется его загрузка</string>
    <string name="action_favorite_task">Избранные задачи</string>
    <string name="hours_sum">Всего часок за сегодня:</string>
</resources>
