<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actGotoTask"
            android:checked="false"
            android:icon="@drawable/ic_num"
            android:title="@string/action_move_to_task"
            />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actLastActivity"
            android:checked="false"
            android:icon="@drawable/ic_message"
            android:title="@string/lastActivity" />
        <item
            android:id="@+id/actWorkTime"
            android:checked="false"
            android:icon="@drawable/ic_calendar"
            android:title="@string/workTime" />
        <item
            android:id="@+id/actProjects"
            android:checked="false"
            android:icon="@drawable/ic_folder"
            android:title="@string/projects" />
        <item
            android:id="@+id/actAssignedTasks"
            android:checked="false"
            android:icon="@drawable/ic_worker"
            android:title="@string/assignedTasks" />
    </group>
</menu>