<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/appBar"
        layout="@layout/layout_ui_app_bar"
        />
    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etTitle"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ru.cs.cstaskclient.widget.InstantAutoComplete
                android:id="@+id/etProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project"
                android:inputType="textNoSuggestions"
                android:ellipsize="middle"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:completionThreshold="1"
                android:text=""
                />
            <ru.cs.cstaskclient.widget.InstantAutoComplete
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:inputType="textNoSuggestions"
                android:ellipsize="middle"
                android:completionThreshold="1"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:text=""
                />

            <ru.cs.cstaskclient.widget.InstantAutoComplete
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:completionThreshold="1"
                android:text=""
                />

            <ru.cs.cstaskclient.widget.InstantAutoComplete
                android:id="@+id/etAssignee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/assignee"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:completionThreshold="1"
                android:text=""
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:layout_weight="0.5"
                    android:hint="@string/start_date"
                    android:id="@+id/etStartDate" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:layout_weight="0.5"
                    android:hint="@string/planned_end_date"
                    android:id="@+id/etPlannedEndDate" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:hint="@string/planned_labor"
                    android:id="@+id/etPlannedLabor" />
                <ru.cs.cstaskclient.widget.InstantMultiAutoComplete
                    android:id="@+id/etTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/tags"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:completionThreshold="1"
                    android:text=""
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_weight="0"
                android:lines="5"
                android:hint="@string/description"
                android:id="@+id/etDescr" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="bottom|right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/bCreate"
                    android:text="@string/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>